assets/css/general/responsiveness.css
#titlebar-container {
	display: none;
	user-select: none;
}

#app-container {
	padding-top: var(--safe-area-top-full);
	padding-left: var(--safe-area-left-full);
	padding-bottom: var(--safe-area-bottom-full);
	padding-right: var(--safe-area-right-full);
}

@keyframes fadein {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@media (max-width: 900px) {
	#all-groups-container,
	#group-programs-container,
	#program-members-container,
	.responsive-sidebar-toggle,
	#current-program-container {
		transition: 0.2s ease-in-out;
		transition-property: opacity, transform, width, padding;
	}
	body:not(:has(#responsive-groups-sidebar-toggle:checked)) #all-groups-container,
	body:not(:has(#responsive-groups-sidebar-toggle:checked)) #group-programs-container,
	body:not(:has(#responsive-members-sidebar-toggle:checked)) #program-members-container,
	body:has(.responsive-sidebar-toggle:checked) #current-program-container {
		opacity: 0 !important;
		pointer-events: none;
		transform: var(--movement) !important;
		user-select: none;
	}
	#program-members-container,
	#current-program-container {
		position: absolute;
		left: var(--safe-area-left-full);
		right: var(--safe-area-right-full);
		width: calc(100% - var(--safe-area-left-full) - var(--safe-area-right-full));
		height: calc(100% - var(--safe-area-bottom-full));
	}
	#all-groups-container,
	#group-programs-container {
		--movement: translateX(-90px);
		transform-origin: left;
	}
	#group-programs-container {
		width: calc(100% - 74px);
	}
	#program-members-container {
		--movement: translateX(40px);
		transform-origin: right;
		position: absolute;
	}
	
	#all-groups-container {
		--movement: translateX(-80px);
	}
	
	#current-program-container {
		position: absolute;
		z-index: -100;
		--movement: translateY(-40px) scale(0.95) rotateX(-2deg);
	}
	
	
	.wallpaper {
		transform: translateX(0);
		transition: transform 0.5s ease-out;
	}
	body:has(#responsive-groups-sidebar-toggle:checked) .wallpaper {
		transform: translateX(20px);
	}
	body:has(#responsive-members-sidebar-toggle:checked) .wallpaper {
		transform: translateX(-20px);
	}
	
	body:not(:has(#program-members-container)) .responsive-sidebar-toggle-container:has(#responsive-members-sidebar-toggle) {
		visibility: hidden;
	}
	
	#current-group-container {
		display: contents !important;
	}
	.sidebar {
		width: calc(100% - 10px);
		box-sizing: border-box;
		margin: 0;
	}
	#titlebar-container {
		display: flex;
		align-items: center;
		justify-content: space-between;
		border-bottom: 1px solid #fff2;
		background: #0005;
		padding-top: var(--safe-area-top-full);
		padding-left: var(--safe-area-left-full);
		padding-right: var(--safe-area-right-full);
	}
	#titlebar-title {
		width: 100%;
	}
	#app-container {
		padding-top: 0;
		perspective: 500px;
	}
	.responsive-sidebar-toggle-container {
		transition: 0.2s ease-out;
		transition-property: transform, opacity;
		opacity: 0.5;
		transform: scale(0.9);
	}
	
	body:has(.responsive-sidebar-toggle:checked) .responsive-sidebar-toggle-container:has(.responsive-sidebar-toggle:not(:checked)) {
		transform: scale(0);
		opacity: 0;
		pointer-events: none;
	}
	
	.responsive-sidebar-toggle-container label {
		display: flex;
		height: 24px;
		width: 24px;
		padding: 10px;
		cursor: pointer;
	}
	.responsive-sidebar-toggle-container:has(.responsive-sidebar-toggle:checked) {
		opacity: 1;
		transform: scale(1);
	}
	.responsive-sidebar-toggle {
		display: none;
	}
	
	.context-menu-overlay {
		background: #0005;
		animation: fadein 0.2s ease-out;
	}
	
	/*
		.context-menu-overlay:before {
			content: "";
			position: fixed;
			left: var(--x);
			top: var(--y);
			background: radial-gradient(closest-side, #fffc, #fff0);
			width: 16px;
			height: 16px;
			opacity: 0.9;
			transform: translate(-50%, -50%);
		}
	*/
	
	.context-menu {
		transform: translate(-50%, -50%) !important;
		left: 50%;
		top: 50%;
		width: 80%;
		box-sizing: border-box;
		border-radius: 5px;
	}

	.context-menu-option {
		padding-bottom: 10px;
		padding-top: 10px;
		padding-left: 40px;
	}
}

@media (max-width: 370px) {
	body:before {
		content: "Your screen is too small to display this app. Please make the window larger, or zoom out.";
		position: fixed;
		left: 0;
		top: 0;
		width: 100vw;
		height: 100vh;
		padding: 30px;
		box-sizing: border-box;
		text-align: center;
		display: flex;
		align-items: center;
		z-index: 1000;
		background: var(--color-background-primary);
	}
	#app-container {
		display: none;
	}
}

